--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 	<div class="quizBody">
 	<iframe src="images/giphy.gif" class="gif1" width="355" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 	<iframe src="images/gif2.gif" class="gif2" width="355" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+	<div class="answers">
+	<a href="#" class="close_button"><i class="fa fa-arrow-up"></i></a>
+	</div>
+	<div class="restart">
+		<button class="restart"><h4>Restart</h4>
+	</div>	
 <!-- Question/Answers -->
 <div class="quiz-container">
 	<h3>Question <span id="count">1</span> of 6</h3>
